[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
rustc-hash = "1.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
smallvec = { version = "1.11.1", features = ["serde", "const_generics", "union", "const_new"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"
debug = false
strip = true
